Added Spring 2024 newsletter.  Fixed Icon on Newsletter page.  Removed just-passed craft thing.

--- a/index.htm
+++ b/index.htm
@@ -222,8 +222,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/b4c34d7fa74b/hart-of-the-matter-winter-2023" target="_blank">
-                                  here for the Winter 2023 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://mailchi.mp/bbb8bf9374ca/hart-of-the-matter-spring-2024" target="_blank">
+                                  here for the Spring 2024 Hart of the Matter newsletter</a>.<br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
@@ -283,13 +283,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <a href="https://cowboyfestival.org/" 
 target="_blank" title="2024 Cowboy Festival">
 <img src="Event_Pages/spring2024/CowboyFest2024-sm.jpg" />
-</a>
-<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<!-------------------------------------------------------------------------------->
-<a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
-title="Crafts for Kids" rel="lightbox[crafts]">
-<h3>Crafts for Kids!</h3>
-<img src="Event_Pages/spring2024/CraftyKids-Mar-Apr-sm.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -357,14 +350,6 @@ Saturdays 10:30am&ndash;12:30pm
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday, April 13<sup>th</sup>, 11am&ndash;12:30pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
-title="Crafts for Kids" rel="lightbox[crafts">
-Crafts for Kids!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
