--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                 <p style="text-indent: 20px"
                                   align="center"> <font color="#008000"
                                     size="4">Donations may be made by
-                                    clicking the donate button here:</font></p>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="55SB5RTHRZ34E">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+                                    clicking here:</font></p>
+                                    <a href="https://www.paypal.com/donate/?hosted_button_id=K9GUB7E8JBSJY"
+                                       target="_blank">
+<!-- Display the payment button. -->
+<input type="image" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate">
+<img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+</a>
                                 <p style="text-indent: 20px"
                                   align="center"> <font color="#008000"
                                     size="2">We thank you for your
