Updated Membership page with donate-only.  Deleted past events.

--- a/The_Friends/membership.html
+++ b/The_Friends/membership.html
@@ -120,6 +120,8 @@ function MM_swapImage() { //v3.0
 					<TD width="876" valign="top"> <p align="center"><b><i>
 					<h2>The Friends of Hart Park &amp; Museum</h2></i></b><br>
 <h4>
+<img src="images/BlurredOldMembershipOptions.png" />
+<!--
 <p>
 Please join The Friends of Hart Park!  We are people in your community who volunteer their time and talents to support the park and museum facilities.  For many years, funds raised by the Friends have been used to help maintain the mansion, help with the animals in the park, and clean/restore numerous art treasures.
 
@@ -213,11 +215,32 @@ Please join The Friends of Hart Park!  We are people in your community who volun
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-
-<!-- Begin Mailchimp Signup Form -->
+-->
+<!--------------------------------------------------------------------------------->
 <br>
 <hr>
 
+                                <p style="text-indent: 20px"
+                                  align="center"> <font color="#008000"
+                                    size="4">Donations may be made by
+                                    clicking here:</font></p>
+                                    <a href="https://www.paypal.com/donate/?hosted_button_id=K9GUB7E8JBSJY"
+                                       target="_blank">
+<!-- Display the payment button. -->
+<p align="center">
+<input type="image" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate">
+<img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+</a>
+</p>
+                                <p style="text-indent: 20px"
+                                  align="center"> <font color="#008000"
+                                    size="2">We thank you for your
+                                    continued support.</font></p>
+<br>
+<hr>
+
+<!--------------------------------------------------------------------------------->
+<!-- Begin Mailchimp Signup Form -->
 
 <div id="mc_embed_signup">
 <form action="https://FriendsOfHartPark.us13.list-manage.com/subscribe/post?u=49d82e29767e797493dce561a&amp;id=435ef0006d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
