--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -248,6 +248,11 @@ function MM_swapImage() { //v3.0
                                   Spring 2024
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/a45121e99c77/hart-of-the-matter-summer-2024" target="_blank">
+                                  Summer 2024
+                                  </a>
+                                  </li>
                           </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
