Summer 2024 movies and concert

--- a/index.htm
+++ b/index.htm
@@ -277,11 +277,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h3>See MORE 
-<a href= "Event_Pages/spring2024/Movies2-June-Aug-lg.jpg" 
+<h3>Summer FREE 
+<a href= "Event_Pages/spring2024/HartSummerMovies2024-lg.png" 
 title="Free Movies" rel="lightbox[movies]">
 Movies in the Park! </h3>
-<img src="Event_Pages/spring2024/Movies2-June-Aug-sm.jpg" />
+<img src="Event_Pages/spring2024/HartSummerMovies2024-sm.png" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -326,11 +326,35 @@ Barnyard Tours
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-June&mdash;August
+Friday, June 21<sup>st</sup>, 8pm
 </td> <td id="Event"> 
-<a href= "Event_Pages/spring2024/Movies2-June-Aug-lg.jpg" 
-title="More Free Movies" rel="lightbox[movies]">
-More Movies in the Park!
+<a href= "Event_Pages/summer2024/Movie2024-6-21.jpg" 
+title="Free Summer Movie: Trolls Band Together" rel="lightbox[movies]">
+Free Summer Movie: Trolls Band Together
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Sunday, June 23<sup>rd</sup>, 8pm
+</td> <td id="Event"> 
+<a href= "Event_Pages/summer2024/Saxtravaganza2024-lg.jpg" 
+title="Free Summer Concert: Saxtravaganza!" rel="lightbox[music]">
+Free Summer Concert: Saxtravaganza!
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Friday, July 19<sup>th</sup>, 8pm
+</td> <td id="Event"> 
+<a href= "Event_Pages/summer2024/Movie2024-7-19.jpg" 
+title="Free Summer Movie: The Little Mermaid" rel="lightbox[movies]">
+Free Summer Movie: The Little Mermaid
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Friday, Aug. 2<sup>nd</sup>, 8pm
+</td> <td id="Event"> 
+<a href= "Event_Pages/summer2024/Movie2024-8-02.jpg" 
+title="Free Summer Movie: Transformers: Rise of the Beasts" rel="lightbox[movies]">
+Free Summer Movie: Transformers: Rise of the Beasts
 </a>
 </td></tr>
 <tr> <td id="EventDate">
