Removed past events; exanded future; hinted at Silents.

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -121,7 +121,7 @@ function MM_swapImage() { //v3.0
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
 <h2 align="center" class="silents">
-are very sorry to announce the postponement of
+We ain't sayin' nuthin' yet, but keep checking back for a possible 2024
 </font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
