--- a/index.htm
+++ b/index.htm
@@ -277,11 +277,19 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h3>Summer FREE 
-<a href= "Event_Pages/spring2024/HartSummerMovies2024-lg.png" 
+<h3>FREE
+<a href= "Event_Pages/summer2024/Movie2024-7-19.jpg" 
 title="Free Movies" rel="lightbox[movies]">
-Movies in the Park! </h3>
-<img src="Event_Pages/spring2024/HartSummerMovies2024-sm.png" />
+Movie in the Park! </h3>
+<img src="Event_Pages/summer2024/Movie2024-7-19-sm.jpg" />
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<h3>FREE
+<a href= "Event_Pages/summer2024/Movie2024-8-02.jpg" 
+title="Free Movies" rel="lightbox[movies]">
+Movie in the Park! </h3>
+<img src="Event_Pages/summer2024/Movie2024-8-02-sm.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -323,22 +331,6 @@ Saturdays 10:30am&ndash;12:30pm
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Friday, June 21<sup>st</sup>, 8pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/summer2024/Movie2024-6-21.jpg" 
-title="Free Summer Movie: Trolls Band Together" rel="lightbox[movies]">
-Free Summer Movie: Trolls Band Together
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Sunday, June 23<sup>rd</sup>, 8pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/summer2024/Saxtravaganza2024-lg.jpg" 
-title="Free Summer Concert: Saxtravaganza!" rel="lightbox[music]">
-Free Summer Concert: Saxtravaganza!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
