Added Silents Under the Stars 2024!

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -121,7 +121,8 @@ function MM_swapImage() { //v3.0
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
 <h2 align="center" class="silents">
-We ain't sayin' nuthin' yet, but keep checking back for a possible 2024
+Silents is back, after a 5 years hiatus! <br>
+Save the date:  Saturday, September 7<sup>th</sub>, 2024<br><br>
 </font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
@@ -135,19 +136,23 @@ Purchase Tickets
 <a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
 HERE
 <span><img src="../images/ExternalLink.png"/></span></a>
--->.
+-->
 <br>
 											</span>
                                             </TD>
 											<TD valign="top">
 											<p class="silents" align="center" >
-                                             Click for photos from 
-                                             <a target="_blank" href="https://www.facebook.com/pg/friendsofhartpark/photos/?tab=album&album_id=2452268634838065">
-                                             2019's Silents Under the Stars!
+                                            <br>
+                                             Click for photos from the previous
+                                             <a target="_blank" href="https://www.facebook.com/media/set/?set=a.2452268634838065&type=3">
+                                             2019's Silents Under the Stars 2019!
                                             <span> <img src="../images/ExternalLink.png"/></span>
                                              </a>
                                              </p>
                                              <br>
+<h2 align="center" class="silents">
+Check back here for tickets when they go on sale, and details as they become available.
+</h2>
                                              <!--
                                              <img src="silents/silents2019/silents2019thumbnail.jpg"/>
                                             <a target="_blank" 
@@ -168,7 +173,7 @@ HERE
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
-                                                        <img align="center" src="silents/silents2022/silents2022x_lg.jpg"/>
+                                                        <img align="center" src="silents/silents2024/Silents2024-saveTheDate2.jpg"/>
                                                         </td>
                                                     </tr>
 													<tr>
@@ -211,6 +216,7 @@ A No-Host Bar will be available for additional charge.
 												</span>
 												<span style="font-size: medium; border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 												<p align="center">
+                                                <!--
 												<font size="5" face="Copperplate Gothic Bold">
 												Proceed to 
 												<a href="../Hart_Hall/hart_hall.html">
@@ -218,6 +224,7 @@ A No-Host Bar will be available for additional charge.
 												to check in.
 												</font></span></p>
 												</span>
+                                                -->
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
 												<span class="Apple-style-span">
 												<font size="5" face="Copperplate Gothic Bold">
