--- a/index.htm
+++ b/index.htm
@@ -277,6 +277,14 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
+<h3>Ticket sales coming soon!</h3>
+<a href= "Event_Pages/silents.html">
+<p align="center">
+<img src="Event_Pages/silents/silents2024/Silents2024-saveTheDate3.jpg" />
+</p>
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
 <h3>FREE
 <a href= "Event_Pages/summer2024/Movie2024-7-19.jpg" 
 title="Free Movies" rel="lightbox[movies]">
@@ -347,6 +355,13 @@ Friday, Aug. 2<sup>nd</sup>, 8pm
 <a href= "Event_Pages/summer2024/Movie2024-8-02.jpg" 
 title="Free Summer Movie: Transformers: Rise of the Beasts" rel="lightbox[movies]">
 Free Summer Movie: Transformers: Rise of the Beasts
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Saturday, Sep. 7<sup>th</sup>, 6pm
+</td> <td id="Event"> 
+<a href= "Event_Pages/silents.html">
+The Return of Silents Under the Stars!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
