--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -120,14 +120,13 @@ function MM_swapImage() { //v3.0
 										<br>
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
-<h2 align="center" class="silents">
-Silents is back, after a 5 years hiatus! <br>
-Save the date:  Saturday, September 7<sup>th</sub>, 2024<br><br>
-</font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
+										<font size="6" face="Copperplate Gothic Bold">Get your Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars tickets 
+                                        <a href="https://www.eventbrite.com/e/2024-silents-under-the-stars-tickets-939914067277?aff=oddtdtcreator" 
+                                         target="_blank">HERE!</a>
+                                        </span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											</span>
                                             <h2 align="center" class="silents">
@@ -151,8 +150,8 @@ HERE
                                              </p>
                                              <br>
 <h2 align="center" class="silents">
-Check back here for tickets when they go on sale, and details as they become available.
-</h2>
+Silents is back, after a 5 years hiatus! <br>
+</font></span></span></h2></p>
                                              <!--
                                              <img src="silents/silents2019/silents2019thumbnail.jpg"/>
                                             <a target="_blank" 
@@ -173,7 +172,7 @@ Check back here for tickets when they go on sale, and details as they become ava
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
-                                                        <img align="center" src="silents/silents2024/Silents2024-saveTheDate2.jpg"/>
+                                                        <img align="center" src="silents/silents2024/Silents2024.png"/>
                                                         </td>
                                                     </tr>
 													<tr>
