--- a/index.htm
+++ b/index.htm
@@ -277,19 +277,13 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h3>Ticket sales coming soon!</h3>
+<h2>Get your tickets 
+<a href="https://www.eventbrite.com/e/2024-silents-under-the-stars-tickets-939914067277?aff=oddtdtcreator"
+ target="_blank">HERE</a> to </h2>
 <a href= "Event_Pages/silents.html">
 <p align="center">
-<img src="Event_Pages/silents/silents2024/Silents2024-saveTheDate3.jpg" />
+<img src="Event_Pages/silents/silents2024/Silents2024-sm.png" />
 </p>
-</a>
-<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<!-------------------------------------------------------------------------------->
-<h3>FREE
-<a href= "Event_Pages/summer2024/Movie2024-8-02.jpg" 
-title="Free Movies" rel="lightbox[movies]">
-Movie in the Park! </h3>
-<img src="Event_Pages/summer2024/Movie2024-8-02-sm.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -331,14 +325,6 @@ Saturdays 10:30am&ndash;12:30pm
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Friday, Aug. 2<sup>nd</sup>, 8pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/summer2024/Movie2024-8-02.jpg" 
-title="Free Summer Movie: Transformers: Rise of the Beasts" rel="lightbox[movies]">
-Free Summer Movie: Transformers: Rise of the Beasts
 </a>
 </td></tr>
 <tr> <td id="EventDate">
