Summer supplement newsletter about Silents Under the Stars

--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -110,14 +110,11 @@ function MM_swapImage() { //v3.0
 					<IMG border="0" src="../images/spacer.gif" width="2" height="385">
 					</TD>
 					<TD width="876" valign="middle" align="center">
-					By becoming a Member of the Friends of Hart Park (click
-					<a href="../The_Friends/membership.html">here</a> for 
-					details), you may receive our quarterly newsletter!<p>
-                    Click below to subscribe:
+					To receive our free quarterly newsletter, click below to subscribe:
                     <a target="_blank" href="https://bit.ly/hartofthematter">
                     <img alt="Hart of the Matter" src="../images/HOTM.png"/>
                     </a>
-                                  Click below for recent Hart of the Matter newsletters:
+                                  And click below for recent Hart of the Matter newsletters:
                     <div align="left">
                                   <ul>
                                   <li>
@@ -253,6 +250,13 @@ function MM_swapImage() { //v3.0
                                   Summer 2024
                                   </a>
                                   </li>
+                                  <ul>
+                                  <li>
+                                  <a href="https://mailchi.mp/7297c8a8b46b/hart-of-the-matter-silents-under-the-stars" target="_blank">
+                                  Summer 2024 Supplement &mdash; Silents Under the Stars!
+                                  </a>
+                                  </li>
+                                  </ul>
                           </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
