--- a/index.htm
+++ b/index.htm
@@ -222,8 +222,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/a45121e99c77/hart-of-the-matter-summer-2024" target="_blank">
-                                  here for the Summer 2024 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://mailchi.mp/7297c8a8b46b/hart-of-the-matter-silents-under-the-stars" target="_blank">
+                                  here for the Summer 2024 Hart of the Matter newsletter
+                                  supplement all about Silents Under the Stars!</a><br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
