--- a/index.html
+++ b/index.html
@@ -278,14 +278,16 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h2>Get your tickets 
-<a href="https://www.eventbrite.com/e/2024-silents-under-the-stars-tickets-939914067277?aff=oddtdtcreator"
- target="_blank">HERE</a> to </h2>
-<a href= "Event_Pages/silents.html">
+<h2>See photos from this year's<br></h2> 
+<h1>Silent Under the Stars
+<a href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.515239427822144"
+ target="_blank">HERE
+</h1>
 <p align="center">
 <img src="Event_Pages/silents/silents2024/Silents2024-sm.png" />
 </p>
 </a>
+
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
 <h3>Mark your calendars for this year&rsquo;s</h3>
@@ -326,13 +328,6 @@ Saturdays 10:30am&ndash;12:30pm
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday, Sep. 7<sup>th</sup>, 6pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/silents.html">
-The Return of Silents Under the Stars!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
