Updated Pow Wow just before event.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -199,11 +199,8 @@ and The Friends of Hart Park &amp; Museum<br></h2>
 -->
 
                           <p align="center">
-                          <img src="powwow/2024/PowWow2024-med.jpg" />
+                          <img src="powwow/2024/PowWow2024.jpg" />
                           </p>
-                          <h2 align="center">Check back here for details as they become available.<h2><br>
-
-                          <p align="center"></p>
 
 <a target="_blank" href="https://www.facebook.com/media/set/?set=a.323036670375755&type=3" 
 title="Hart of the West Pow Wow">
