--- a/index.html
+++ b/index.html
@@ -278,6 +278,13 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
+<h2>Hart of the West Pow Wow</h2>
+<h4>Click on the image  below for details.<br></h4>
+<a href="Event_Pages/powwow.html" title="2024 Pow Wow">
+<img src="Event_Pages/powwow/2024/PowWow2024-sm.jpg" />
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
 <h2>See photos from this year's<br></h2> 
 <h1>Silent Under the Stars
 <a href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.515239427822144"
@@ -288,14 +295,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 </p>
 </a>
 
-<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<!-------------------------------------------------------------------------------->
-<h3>Mark your calendars for this year&rsquo;s</h3>
-<h2>Hart of the West Pow Wow</h2>
-<h4>Click on the banner below for details, as they become available.<br></h4>
-<a href="Event_Pages/powwow.html" title="2024 Pow Wow">
-<img src="Event_Pages/powwow/2024/PowWow2024-sm.jpg" />
-</a>
 <!-------------------------------------------------------------------------------->
 <!--
 
