Added History Hops, new Newsletter and Barnyard Lights calendar entry.

--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -257,6 +257,11 @@ function MM_swapImage() { //v3.0
                                   </a>
                                   </li>
                                   </ul>
+                                  <li>
+                                  <a href="https://mailchi.mp/ea9f428cebda/hart-of-the-matter-fall-2024" target="_blank">
+                                  Fall 2024
+                                  </a>
+                                  </li>
                           </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
