--- a/index.html
+++ b/index.html
@@ -202,6 +202,21 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                 </tr>
                                 <tr>
                                   <td style="vertical-align: top;">
+                                    <a href="https://www.facebook.com/media/set/?set=a.515239427822144&type=3" target="_blank">
+                                      <img width="312" alsign="center" src="Event_Pages/silents/silents2024/Silents2024pix.jpg"/>
+                                    </a>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
                                     <a href="Trading_Post/store.html">
                                       <img width="312" alsign="center" src="Trading_Post/TradingPostHours_sm.png"/>
                                     </a>
@@ -222,9 +237,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/7297c8a8b46b/hart-of-the-matter-silents-under-the-stars" target="_blank">
-                                  here for the Summer 2024 Hart of the Matter newsletter
-                                  supplement all about Silents Under the Stars!</a><br>
+                                  <a href="https://mailchi.mp/ea9f428cebda/hart-of-the-matter-fall-2024" target="_blank">
+                                  here for the Fall 2024 Hart of the Matter newsletter!</a><br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
@@ -285,13 +299,15 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
-<h2>See photos from this year's<br></h2> 
-<h1>Silent Under the Stars
-<a href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.515239427822144"
- target="_blank">HERE
+<h2>Check out the new event coming Oct. 19<sup>th</sup> to Hart Park!<br></h2> 
+<small><p>On Saturday, October 19, from 5 to 9 pm, the &lsquo;50s come to life with music, dancing, a visit from Lucy, a possible Elvis sighting and delicious burgers and beer at &ldquo;SCV History Hops: Back to the &lsquo;50s&rdquo; &mdash; the first post-pandemic fundraiser held at the Santa Clarita History Center.  The group is raising money to finance needed restoration projects, including the completion of the museum in the Saugus Train Station, slated to open in summer 2025.
+</p><p>
+Everyone is welcome, tickets are $50 per person, and sponsorships, as well as reserved tables, are available. Call (661) 607-4054 to reserve tables or become a sponsor; for individual tickets, visit Eventbrite.com and search &ldquo;SCV History Hops&rdquo; or click on flyer below.</p></small>
+<a href="https://www.eventbrite.com/e/scv-history-hops-back-to-the-50s-tickets-993770774137"
+ target="_blank">
 </h1>
 <p align="center">
-<img src="Event_Pages/silents/silents2024/Silents2024-sm.png" />
+<img src="Event_Pages/HistHopcard.jpg" />
 </p>
 </a>
 
@@ -336,23 +352,20 @@ Saturday &amp; Sunday, Oct. 5<sup>th</sup>&ndash;6<sup>th</sup>
 30<sup>th</sup> Annual Hart of the West Pow Wow!
 </a>
 </td></tr>
-<!--
 <tr> <td id="EventDate">
-Saturday, Nov. 7<sup>th</sup> in Hart Hall
+Saturday, Oct. 19<sup>th</sup>
 </td> <td id="Event"> 
-SCV Rose Society &ndash; 25<sup>th</sup> Annual Wild West Rose Show
+<a target="_blank" href= "https://www.eventbrite.com/e/scv-history-hops-back-to-the-50s-tickets-993770774137">
+SCV History Hops &ndash; Back to the &lsquo;50s
+</a>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday &amp; Sunday, Nov 21<sup>st</sup> &amp; 22<sup>nd</sup> 10am&mdash;4pm in Hart Hall
+Saturday, Dec. 14<sup>th</sup>, 5&ndash;7:30pm
 </td> <td id="Event"> 
-9th Annual Hart Holiday Boutique
+<a href= "Event_Pages/BarnyardLights2024-lg.jpg" 
+title="Barnyard Light Tour" rel="lightbox[barnyardlights]">
+Barnyard Light Tour
 </td></tr>
-<tr> <td id="EventDate"
-Saturday, Dec. 5<sup>th</sup>
-</td> <td id="Event"> 
-Cowboys &amp; Carols
-</td></tr>
--->
                                     <!--
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 1<sup>st</sup>
