Finally put Pow Wow on the website, and removed old events.

--- a/index.htm
+++ b/index.htm
@@ -292,26 +292,18 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h2>Hart of the West Pow Wow</h2>
-<h4>Click on the image  below for details.<br></h4>
-<a href="Event_Pages/powwow.html" title="2024 Pow Wow">
-<img src="Event_Pages/powwow/2024/PowWow2024-sm.jpg" />
+<h2>Join us for the holidays!</h2>
+<a href= "Event_Pages/BarnyardLights2024-lg.jpg" 
+  title="Barnyard Light Tour" rel="lightbox[barnyardlights]">
+<img src="Event_Pages/BarnyardLights2024-sm.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
-<h2>Check out the new event coming Oct. 19<sup>th</sup> to Hart Park!<br></h2> 
-<small><p>On Saturday, October 19, from 5 to 9 pm, the &lsquo;50s come to life with music, dancing, a visit from Lucy, a possible Elvis sighting and delicious burgers and beer at &ldquo;SCV History Hops: Back to the &lsquo;50s&rdquo; &mdash; the first post-pandemic fundraiser held at the Santa Clarita History Center.  The group is raising money to finance needed restoration projects, including the completion of the museum in the Saugus Train Station, slated to open in summer 2025.
-</p><p>
-Everyone is welcome, tickets are $50 per person, and sponsorships, as well as reserved tables, are available. Call (661) 607-4054 to reserve tables or become a sponsor; for individual tickets, visit Eventbrite.com and search &ldquo;SCV History Hops&rdquo; or click on flyer below.</p></small>
-<a href="https://www.eventbrite.com/e/scv-history-hops-back-to-the-50s-tickets-993770774137"
- target="_blank">
-</h1>
-<p align="center">
-<img src="Event_Pages/HistHopcard.jpg" />
-</p>
+<h3>Click below to view photos from</h3>
+<a href="https://www.facebook.com/media/set/?set=a.558902970122456&type=3"
+   target="_blank">
+<img src="Event_Pages/powwow/2024/PowWow2024pix-lg.jpg"/>
 </a>
-
-<!-------------------------------------------------------------------------------->
 <!--
 
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
@@ -343,20 +335,6 @@ Saturdays 10:30am&ndash;12:30pm
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday &amp; Sunday, Oct. 5<sup>th</sup>&ndash;6<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/powwow.html">
-30<sup>th</sup> Annual Hart of the West Pow Wow!
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday, Oct. 19<sup>th</sup>
-</td> <td id="Event"> 
-<a target="_blank" href= "https://www.eventbrite.com/e/scv-history-hops-back-to-the-50s-tickets-993770774137">
-SCV History Hops &ndash; Back to the &lsquo;50s
 </a>
 </td></tr>
 <tr> <td id="EventDate">
