--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/ea9f428cebda/hart-of-the-matter-fall-2024" target="_blank">
-                                  here for the Fall 2024 Hart of the Matter newsletter!</a><br>
+                                  <a href="https://mailchi.mp/c2b0329b2155/hart-of-the-matter-winter-2024" target="_blank">
+                                  here for the Winter 2024 Hart of the Matter newsletter!</a><br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
