--- a/index.html
+++ b/index.html
@@ -292,10 +292,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h2>Join us for the holidays!</h2>
-<a href= "Event_Pages/BarnyardLights2024-lg.jpg" 
-  title="Barnyard Light Tour" rel="lightbox[barnyardlights]">
-<img src="Event_Pages/BarnyardLights2024-sm.jpg" />
+<h2>Click below to see pictures from the Barnyard Light Tours!</h2>
+<a href= "https://www.facebook.com/media/set/?set=a.583531837659569&type=3" 
+  target="_blank"
+  title="Barnyard Light Tour">
+<img src="images/2024BarnyardLights.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -336,13 +337,6 @@ Saturdays 10:30am&ndash;12:30pm
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
 </a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday, Dec. 14<sup>th</sup>, 5&ndash;7:30pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/BarnyardLights2024-lg.jpg" 
-title="Barnyard Light Tour" rel="lightbox[barnyardlights]">
-Barnyard Light Tour
 </td></tr>
                                     <!--
                                     <tr>
