Updated board photo

--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -142,7 +142,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                       border="0" height="385" width="2"> </td>
                   <td valign="top" width="876">
                     <div align="center"> <img
-                        src="images/FOHPboard2017.jpg" border="0">
+                        src="images/board2025.jpg" border="0">
                       <hr>
                       <table border="0" width="760">
                         <tbody>
